--- a/templates/admin/partials/sidebar.html.twig
+++ b/templates/admin/partials/sidebar.html.twig
@@ -67,6 +67,14 @@
                         </p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{ path('admin_temoignage_index') }}" class="nav-link">
+                        <i class="nav-icon fas fa-comment-alt"></i>
+                        <p>
+                            Témoignages
+                        </p>
+                    </a>
+                </li>
             </ul>
         </nav>
 
