--- a/templates/pages/temoignages.html.twig
+++ b/templates/pages/temoignages.html.twig
@@ -41,27 +41,29 @@
     <div class="pagination justify-content-center my-5">
         {{ knp_pagination_render(temoignages) }}
     </div>
-    {% if app.user.getPayments | length > 0 or app.user.getSouscription %}
-        <div class="row justify-content-center mt-5">
-            <div class="col-10 col-md-6 text-white text-center">
-                <h2 class="mt-3 mb-3">VOUS AUSSI, VOUS POUVEZ TÉMOIGNER</h2>
-                <div class="mt-2">
-                    <img class="p-3" src="/images/templating/separator-blue.png">
+    {% if app.user %}
+        {% if app.user.getPayments | length > 0 or app.user.getSouscription %}
+            <div class="row justify-content-center mt-5">
+                <div class="col-10 col-md-6 text-white text-center">
+                    <h2 class="mt-3 mb-3">VOUS AUSSI, VOUS POUVEZ TÉMOIGNER</h2>
+                    <div class="mt-2">
+                        <img class="p-3" src="/images/templating/separator-blue.png">
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-6 form-group">
-                    {{ form_start(form) }}
-                    {{ form_widget(form) }}
-                    <button type="submit" class="btn-secondary-custom mt-4">
-                        Envoyer le témoignage
-                    </button>
-                    {{ form_end(form) }}
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-6 form-group">
+                        {{ form_start(form) }}
+                        {{ form_widget(form) }}
+                        <button type="submit" class="btn-secondary-custom mt-4">
+                            Envoyer le témoignage
+                        </button>
+                        {{ form_end(form) }}
+                    </div>
                 </div>
             </div>
-        </div>
+        {% endif %}
     {% endif %}
 
 
