--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -192,7 +192,7 @@
     <div class="row justify-content-center m-0">
         <div class="col-12 col-md-3 mt-5 mb-5">
             <div class="btn-primary-custom text-white text-center font-weight-light">
-                <a class="font-weight-bolder text-white no-hover" href="">Découvrir l'équipe</a>
+                <a class="font-weight-bolder text-white no-hover" href="{{ path('page_equipe') }}">Découvrir l'équipe</a>
             </div>
         </div>
     </div>
