--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -45,7 +45,7 @@
 							<ul class="dropdown-menu dropdown-menu-center">
 								<li><a href="{{ path('temoignages_page') }}" class="dropdown-item">Témoignage</a></li>
 								<li><a href="#" class="dropdown-item">Lexique</a></li>
-								<li><a href="#" class="dropdown-item">Qui sommes nous ?</a></li>
+								<li><a href="{{ path('page_equipe') }}" class="dropdown-item">Qui sommes nous ?</a></li>
 								<li><a href="#" class="dropdown-item">Parrainage</a></li>
 								<li><a href="#" class="dropdown-item">Affiliation</a></li>
 								<div class="dropdown-divider"></div>
