TODO page témoignage

--- a/templates/pages/temoignages.html.twig
+++ b/templates/pages/temoignages.html.twig
@@ -65,8 +65,7 @@
             </div>
         {% endif %}
     {% endif %}
-
-
+    {#TODO : Ajouter bloc pour user non connecté#}
 
 {% endblock %}
 
